[gd_scene load_steps=2 format=3 uid="uid://by8ksoxd3mme3"]

[ext_resource type="Script" path="res://Scripts/Other/console_window.gd" id="1_urwak"]

[node name="Console Window" type="Window" node_paths=PackedStringArray("console_log", "input_label", "input_field")]
process_mode = 3
transparent_bg = true
title = "Console"
position = Vector2i(0, 36)
size = Vector2i(500, 500)
visible = false
always_on_top = true
min_size = Vector2i(250, 250)
max_size = Vector2i(10000, 10000)
keep_title_visible = true
script = ExtResource("1_urwak")
console_log = NodePath("Console/MarginContainer/VBoxContainer/ConsoleLog")
input_label = NodePath("Console/MarginContainer/VBoxContainer/HBoxContainer/InputLabel")
input_field = NodePath("Console/MarginContainer/VBoxContainer/HBoxContainer/InputField")
metadata/_edit_vertical_guides_ = [1809.0]

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Console" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Console"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Console/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConsoleLog" type="RichTextLabel" parent="Console/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="Console/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InputLabel" type="Label" parent="Console/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "[User]"

[node name="InputField" type="LineEdit" parent="Console/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type: \"/help\" For Commands."
context_menu_enabled = false

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="focus_exited" from="." to="." method="_on_console_window_focus_exited"]
[connection signal="text_submitted" from="Console/MarginContainer/VBoxContainer/HBoxContainer/InputField" to="." method="_on_input_field_text_submitted"]
